Corrected accidental overflow of cast staff drop downs.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -142,7 +142,7 @@ body {
 }
 
 .content td {
-  width:370px;
+  width: 500px;
 }
 
 #sf_admin_container .sf_admin_data h3 {
